fixed bug with text decoration (navbar z-index 1)

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -18,6 +18,7 @@ body {
     position:fixed;
     right: 0;
     left:0;
+    z-index: 1;
 }
 
 form {
